--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,21 @@
 language: scala
+sudo: false
+dist: trusty
+
+jdk:
+  - openjdk8
 
 scala:
   - 2.12.2
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot
+
+before_cache:
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
 
 script:
   - sbt clean jacoco
